FullscreenButton: Show warning if fullscreen mode is not available

--- a/ember/translations/de.yaml
+++ b/ember/translations/de.yaml
@@ -82,6 +82,7 @@ followers: Verfolger
 following: Verfolgen
 forgot-password: Passwort vergessen?
 friends: Freunde
+fullscreen-not-supported: Dein Browser unterstützt leider keinen Vollbildmodus. 😢
 generate-new-key: Generiere neuen Key
 generating-new-key: Generiere neuen Key...
 glide-rate: Gleitzahl
