--- a/ember/translations/en.yaml
+++ b/ember/translations/en.yaml
@@ -263,7 +263,7 @@ tracking:
   clients: Clients
   xcsoar-description: available starting with {release}
   instructions-below: Instructions below.
-  available-in-gaggle: now available in the current version of Gaggle
+  skylines-tracker-description: now available in the current version of SkyLines Tracker
   lt24-clients: LiveTrack24 clients
   lt24-description: You can also use all available applications that use the {livetrack24} protocol for sending your locations to SkyLines. Just use your Live Tracking Key as username, choose any password you want and configure {skylines} as the server.
   your-live-tracking-key-is-KEY: 'Your Live Tracking key is: {key}'
